Refactor code structure for improved readability and maintainability

--- a/browser-extensions-manager-ui-main/index.html
+++ b/browser-extensions-manager-ui-main/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="extensions-grid">
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-devlens.svg" alt="DevLens" class="extension-logo">
           <div class="extension-info">
@@ -40,10 +40,17 @@
             <p class="extension-description">Quickly inspect page layouts and visualize element boundaries.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
+        
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-style-spy.svg" alt="StyleSpy" class="extension-logo">
           <div class="extension-info">
@@ -51,10 +58,16 @@
             <p class="extension-description">Instantly analyze and copy CSS from any webpage element.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card inactive" data-status="inactive">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-speed-boost.svg" alt="SpeedBoost" class="extension-logo">
           <div class="extension-info">
@@ -62,10 +75,16 @@
             <p class="extension-description">Optimizes browser resource usage to accelerate page loading.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-json-wizard.svg" alt="JSONWizard" class="extension-logo">
           <div class="extension-info">
@@ -73,10 +92,16 @@
             <p class="extension-description">Formats, validates, and prettifies JSON responses in-browser.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-tab-master-pro.svg" alt="TabMaster Pro" class="extension-logo">
           <div class="extension-info">
@@ -84,10 +109,16 @@
             <p class="extension-description">Organizes browser tabs into groups and sessions.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card inactive" data-status="inactive">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-viewport-buddy.svg" alt="ViewportBuddy" class="extension-logo">
           <div class="extension-info">
@@ -95,10 +126,16 @@
             <p class="extension-description">Simulates various screen resolutions directly within the browser.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-markup-notes.svg" alt="Markup Notes" class="extension-logo">
           <div class="extension-info">
@@ -106,10 +143,16 @@
             <p class="extension-description">Enables annotation and notes directly onto webpages for collaborative debugging.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card inactive" data-status="inactive">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-grid-guides.svg" alt="GridGuides" class="extension-logo">
           <div class="extension-info">
@@ -117,10 +160,16 @@
             <p class="extension-description">Overlay customizable grids and alignment guides on any webpage.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-palette-picker.svg" alt="Palette Picker" class="extension-logo">
           <div class="extension-info">
@@ -128,10 +177,16 @@
             <p class="extension-description">Instantly extracts color palettes from any webpage.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-link-checker.svg" alt="LinkChecker" class="extension-logo">
           <div class="extension-info">
@@ -139,10 +194,16 @@
             <p class="extension-description">Scans and highlights broken links on any page.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card inactive" data-status="inactive">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-dom-snapshot.svg" alt="DOM Snapshot" class="extension-logo">
           <div class="extension-info">
@@ -150,10 +211,16 @@
             <p class="extension-description">Capture and export DOM structures quickly.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
 
-      <div class="extension-card active" data-status="active">
+      <div class="extension-card inactive">
         <div class="extension-header">
           <img src="./assets/images/logo-console-plus.svg" alt="ConsolePlus" class="extension-logo">
           <div class="extension-info">
@@ -161,7 +228,13 @@
             <p class="extension-description">Enhanced developer console with advanced filtering and logging.</p>
           </div>
         </div>
-        <button class="remove-btn">Remove</button>
+        <div class="button-toggle-style">
+          <button class="remove-btn">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
     </main>
 
